more autos and paths

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,38 +1,34 @@
 {
-  "robotWidth": 0.9271,
-  "robotLength": 0.927,
+  "robotWidth": 0.9,
+  "robotLength": 0.9,
   "holonomicMode": true,
-  "pathFolders": [
-    "Left Auto Paths",
-    "Right Auto Paths",
-    "Center Auto Paths"
-  ],
+  "pathFolders": [],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
+  "defaultMaxVel": 1.5,
   "defaultMaxAccel": 3.0,
-  "defaultMaxAngVel": 360.0,
-  "defaultMaxAngAccel": 360.0,
+  "defaultMaxAngVel": 540.0,
+  "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 67.31,
-  "robotMOI": 12.933,
+  "robotMass": 74.088,
+  "robotMOI": 6.883,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.038,
-  "driveGearing": 5.08,
-  "maxDriveSpeed": 4.8,
-  "driveMotorType": "NEO",
-  "driveCurrentLimit": 40.0,
-  "wheelCOF": 1.19,
-  "flModuleX": 0.337,
-  "flModuleY": 0.337,
-  "frModuleX": 0.337,
-  "frModuleY": -0.337,
-  "blModuleX": -0.337,
-  "blModuleY": 0.337,
-  "brModuleX": -0.337,
-  "brModuleY": -0.337,
+  "driveWheelRadius": 0.048,
+  "driveGearing": 5.143,
+  "maxDriveSpeed": 5.45,
+  "driveMotorType": "krakenX60",
+  "driveCurrentLimit": 60.0,
+  "wheelCOF": 1.2,
+  "flModuleX": 0.273,
+  "flModuleY": 0.273,
+  "frModuleX": 0.273,
+  "frModuleY": -0.273,
+  "blModuleX": -0.273,
+  "blModuleY": 0.273,
+  "brModuleX": -0.273,
+  "brModuleY": -0.273,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": [
-    "{\"name\":\"Rectangle\",\"type\":\"rounded_rect\",\"data\":{\"center\":{\"x\":0.59,\"y\":-0.025},\"size\":{\"width\":0.2,\"length\":0.229},\"borderRadius\":0.005,\"strokeWidth\":0.015,\"filled\":false}}"
+    "{\"name\":\"Rectangle\",\"type\":\"rounded_rect\",\"data\":{\"center\":{\"x\":0.0,\"y\":0.0},\"size\":{\"width\":0.2,\"length\":1.3064},\"borderRadius\":0.05,\"strokeWidth\":0.02,\"filled\":false}}"
   ]
 }
